--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,11 @@
 server:
-  port: 9001
+  port: 0
+  # port : 0 => random port enable
   
 spring:  application:    name: user-service
     
-eureka:  client:    register-with-eureka: true
+eureka:
+  instance:    instance-id: ${spring.cloud.client.hostname}:${spring.application.instance_id:${random.value}}  client:    register-with-eureka: true
     fetch-registry: true
     service-url :
       defaultZone : http://localhost:8761/eureka
